[package]
name = "hex"
version = "0.4.3"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex/"
repository = "https://github.com/KokaKiwi/rust-hex"
edition = "2018"
exclude = ["/sgx/*"]

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]

[[bench]]
name = "hex"
harness = false

[dependencies]
serde = { git = "https://github.com/yunuseozer/serde-sgx.git", default-features = false, optional = true }
sgx_tstd = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git", optional = true }


[dev-dependencies]
#criterion = "0.2"
#rustc-hex = "2.0"
#faster-hex = "0.3"
